:bug: Fix extra padding around body

--- a/exercises/harry-potter-world/harry-potter-world.css
+++ b/exercises/harry-potter-world/harry-potter-world.css
@@ -1,5 +1,6 @@
 body {
-	font-family: 'Berkshire Swash', cursive;
+  font-family: 'Berkshire Swash', cursive;
+  margin: 0;
 }
 
 .diagon-alley {
